# mvscanner

./: .prettierignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  prettier.yml
backend/: .env.testing  .gitignore  Cargo.toml  docker-compose.yml
backend/entity/: Cargo.toml
backend/entity/src/: lib.rs  locations.rs  prelude.rs  residents.rs  timestamps.rs
backend/init-scripts/: init.sql
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_locations.rs  m20231210_134627_residents.rs  m20231210_134639_timestamps.rs  m20231210_150005_levels.rs  m20231213_132412_seed_locations.rs  m20231213_162420_seed_test_data.rs
backend/seed_data/: locations.json  residents.json  test.py  timestamps.json  timestmaps.json
backend/src/: app_config.rs  lib.rs  main.rs
backend/src/controllers/: locations_controller.rs  mod.rs  residents_controller.rs  timestamps_controller.rs
backend/src/database/: db.rs
backend/src/models/: locations.rs  mod.rs  residents.rs  response.rs  timestamps.rs
backend/test/: Cargo.toml
backend/test/src/: lib.rs
backend/testapi/: Cargo.toml
backend/testapi/src/: lib.rs
scanui/: .development.env  .env  README.md  index.html  listen.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts  vite.config.ts.timestamp-1700437941207-7520d7709554a.mjs
scanui/.husky/: pre-commit
scanui/src/: App.css  App.tsx  index.css  index.tsx
scanui/src/api/: API.ts  CreateResident.ts  CreateTimestamp.ts  GetLocation.tsx  GetResident.tsx  ResidentInOut.ts  Scan.ts  UpdateResident.tsx
scanui/src/components/: EditResidentModal.tsx  IconButton.tsx  ResidentIDModal.tsx  STable.tsx  Scanner.ts
scanui/src/styles/: STable.css
scanui/src/types/: Models.ts  componentTypes.ts  enums.ts  global.d.ts  models.ts  sortingTypes.ts  tableTypes.ts
src/: app.js  main.js
src/router/: router.js
src/types/: pagerenderer.js  template.js
