[package]
name = "scan_mvcf"
version = "0.1.0"
authors = ["PThorpe92 <preston@unlockedlabs.org>"]
license = "MIT"
edition = "2021"

[workspace]
members = [".", "entity", "migration", "testapi"]


[dependencies]
serde_json = { version = "1.0.108", features = ["std"] }
serde = { version = "1.0.190", features = ["derive"] }
dirs = "5.0.1"
once_cell = "1.18.0"
chrono = "0.4.30"
actix = "0.13.1"
actix-web = { version = "4.4.0", features = ["http2", "macros"] }
env_logger = "0.10.0"
log = "0.4.20"
futures-util = "0.3.29"
serde_with = "3.4.0"
reqwest = "0.11.22"
actix-cors = "0.6.5"
actix-session = "0.8.0"
sea-orm = { version = "0.12.9", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
  "with-json",
  "with-chrono",
] }
entity = { path = "entity" }
migration = { path = "migration" }
testapi = { path = "testapi" }
dotenvy = "0.15.7"
